[project]
name = "loglens-cli"
version = "0.1.0"
description = "Kompaktes CLI-Tool zur Analyse von Logfiles (Level, Zeitfenster, Top-Fehler, Quellen)."
authors = [{ name = "Kai" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = []

[project.scripts]
loglens = "loglens.cli:main"
